task6,task7,task8,task9

--- a/SourceCode/2023/Dec2023/LaksmiTriveni/Task6/Main.xaml
+++ b/SourceCode/2023/Dec2023/LaksmiTriveni/Task6/Main.xaml
@@ -83,7 +83,7 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <ui:LogMessage DisplayName="Start" sap:VirtualizedContainerService.HintSize="434,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Start&quot;]" />
+    <ui:LogMessage DisplayName="Start" sap:VirtualizedContainerService.HintSize="434,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Execution Started&quot;]" />
     <Assign sap2010:Annotation.AnnotationText="Collection of all fruit names using ArrayString" DisplayName="Fruit Names" sap:VirtualizedContainerService.HintSize="434,113" sap2010:WorkflowViewState.IdRef="Assign_1">
       <Assign.To>
         <OutArgument x:TypeArguments="s:String[]">[Fruits]</OutArgument>
